Ajout d'un slider

--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
 				<button class="btn-filtrer-description">Filtrer les pièces qui ont une description</button>
 				<br>
 				<button class="btn-trier-decroissant">Trier par prix décroissant</button>
+				<br>
+				<p>Prix maximum:</p>
+				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
 			</section>
 
 			<!-- Fiches produits -->
 			<section class="fiches">
-				<div class="abordables">
-					<p>Pièces abordables :</p>
-				</div>
-				<div class="disponibles">
-					<p>Pièces disponibles :</p>
-				</div>
+				<div class="abordables"></div>
+				<div class="disponibles"></div>
 			</section>
 		</main>
 	</body>
